tasky-main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-app-service
  namespace: notes-app
  labels:
    app: notes-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: notes-app
